[PBI-1302] CSS fixes and stopgaps

--- a/scss/components/_plugins.scss
+++ b/scss/components/_plugins.scss
@@ -9,6 +9,6 @@
   display: none;
 }
 
-.plugins.showing {
+.player_skin_plugins.showing {
   display: block;
 }
